# zilliandomizer

./: .gitignore  LICENSE  pyproject.toml  readme.md  requirements_dev.txt  set_version.py  setup.cfg  setup.py  tox.ini
.basedpyright/: baseline.json
.github/workflows/: tests.yml
roms/: options.yaml  put Zillion (UE) [!].sms original rom here
src/: generate.py  zri.py
src/zilliandomizer/: __init__.py  alarm_data.py  alarms.py  asm.py  code_generation.py  game.py  generator.py  items.py  location_data.py  locations.py  logger.py  np_sprite_manager.py  options.py  options_parsing.py  patch.py  randomizer.py  region_data.py  regions.py  resource_managers.py  rom_info.py  system.py  terrain_compressor.py  terrain_modifier.py  utils.py  ver.py
src/zilliandomizer/logic_components/: items.py  location_data.py  locations.py  region_data.py  regions.py
src/zilliandomizer/low_resources/: asm.py  item_rooms.py  loc_id_maps.py  ram_info.py  rom_info.py  room_data.py  sprite_data.py  sprite_types.py  terrain_compressor.py  terrain_mods.py  terrain_tiles.py
src/zilliandomizer/map_gen/: base.py  base_maker.py  door_data.py  door_decider.py  door_manager.py  jump.py  map_data.py  region_maker.py  room_data_maker.py  split_maker.py
src/zilliandomizer/options/: __init__.py  parsing.py  random_gen.py
src/zilliandomizer/room_gen/: aem.py  alarm_entrance_data.py  common.py  data.py  maze.py  room_gen.py  sprite_placing.py
src/zilliandomizer/utils/: __init__.py  deterministic_set.py  disjoint_set.py  file_verification.py  loc_name_maps.py  loc_name_matcher.py
src/zilliandomizer/zri/: events.py  memory.py  rai.py  ram_interface.py  ram_ranges.py
src/zilliandomizer/zri/asyncudp/: __init__.py  version.py
tests/: conftest.py  test_alarm_data.py  test_base_maker.py  test_data.py  test_door_manager.py  test_door_sprites.py  test_game.py  test_generate.py  test_loc_id_maps.py  test_memory.py  test_options.py  test_patch.py  test_randomizer.py  test_requirements.py  test_room_gen.py  test_split_maker.py  test_sprite_placing.py  test_utils.py  verified.py
