[build-system]
requires = ["setuptools>=45.0", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=zilliandomizer --cov-branch"
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]

[tool.coverage.report]
exclude_lines = [
    "abstractmethod",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
