[metadata]
name = zilliandomizer
description = Zillion randomizer
author = Doug Hoskisson
license = LAGPL
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages =
    zilliandomizer
python_requires = >= 3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.1
    pytest-cov>=4.0
    mypy>=1.7
    flake8>=5.0
    tox>=4.15

[options.package_data]
zilliandomizer = py.typed
